tests/ui/app_error/fail/missing_kind.rs
// SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
//
// SPDX-License-Identifier: MIT

use masterror::Error;

#[derive(Debug, Error)]
#[error("oops")]
#[app_error(message)]
struct MissingSpec;

fn main() {}
