tests/ui/app_error/fail/missing_kind.stderr
error: missing `kind = ...` in #[app_error(...)]
 --> tests/ui/app_error/fail/missing_kind.rs:9:1
  |
9 | #[app_error(message)]
  | ^
